compiler/weave_syntax/tests/data/syntax/IncompleteNamespace3.error
error: unexpected token '[token::end-of-file]', expected '}'
        --> <source>:2:1
         |
       2 | 
         | ^
